--- a/third_workshop/Vehicles_creator/Frontend/htmls/vehicles_ask.html
+++ b/third_workshop/Vehicles_creator/Frontend/htmls/vehicles_ask.html
@@ -1,52 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>What Type of Vehicle</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 50px;
-    }
-
-    h1 {
-      font-size: 24px;
-    }
-
-    .button-container {
-      margin-top: 20px;
-    }
-
-    .button-container button {
-      margin-right: 10px;
-      padding: 10px 20px;
-      font-size: 18px;
-      background-color: #000;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .button-container button:last-child {
-      margin-right: 0;
-    }
-
-    .button-container button:hover {
-      background-color: #333;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>What Type of Vehicle</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>What type of vehicle?</h1>
-  <div class="button-container">
-    <button onclick="location.href='car.html'">Car</button>
-    <button onclick="location.href='truck.html'">Truck</button>
-    <button onclick="location.href='motorcycle.html'">Motorcycle</button>
-    <button onclick="location.href='yacht.html'">Yacht</button>
-  </div>
+    <h1>What type of vehicle?</h1>
+    <div class="button-container">
+        <button onclick="location.href='create_vehicle.html'">Car</button>
+        <button onclick="location.href='create_vehicle.html'">Truck</button>
+        <button onclick="location.href='create_vehicle.html'">Motorcycle</button>
+        <button onclick="location.href='create_vehicle.html'">Yacht</button>
+    </div>
 </body>
 </html>
